infinite page 버그 수정

--- a/templates/linkkf-yommi_category.html
+++ b/templates/linkkf-yommi_category.html
@@ -330,8 +330,9 @@
     for (let i in data.episode) {
       tmp = '<div class="col-6 col-sm-4 col-md-3">';
       tmp += '<div class="card">';
-      tmp +=
-        '<img class="card-img-top lazyload" src="./static/img_loader_x200.svg" data-original="' + data.episode[i].image_link + '" />';
+      // tmp +=
+      //   '<img class="card-img-top lazyload" src="./static/img_loader_x200.svg" data-original="' + data.episode[i].image_link + '" />';
+      tmp += '<img class="card-img-top lazy" src="./static/img_loader_x200.svg" data-lazy-src="' + data.episode[i].image_link + '" />';
       tmp += '<div class="card-body">';
       tmp += '<h5 class="card-title">' + data.episode[i].title + "</h5>";
       tmp += '<p class="card-text">' + data.episode[i].code + "</p>";
@@ -701,23 +702,23 @@
     });
   });
 
-  $("#go_modal_airing").on("shown.bs.modal", function () {
-    // {#get_airing_list()#}
-    $("#exModal").trigger("focus");
-  });
+  // $("#go_modal_airing").on("shown.bs.modal", function () {
+  //   // {#get_airing_list()#}
+  //   $("#exModal").trigger("focus");
+  // });
 
-  $("#go_modal_airing").click(function (e) {
-    e.preventDefault();
-    console.log("open modal");
-    $("#exModal").bootstrapToggle();
-    if (current_airing_data === "") {
-      get_airing_list();
-    }
-    $("#inner_airing").toggle();
-    $("#airing_list").toggle();
-  });
+  // $("#go_modal_airing").click(function (e) {
+  //   e.preventDefault();
+  //   console.log("open modal");
+  //   // $("#exModal").bootstrapToggle();
+  //   if (current_airing_data === "") {
+  //     get_airing_list();
+  //   }
+  //   $("#inner_airing").toggle();
+  //   $("#airing_list").toggle();
+  // });
 
-  $("#go_modal_airing").attr("class", "btn btn-primary");
+  // $("#go_modal_airing").attr("class", "btn btn-primary");
 
 
   $(document).ready(function () {
@@ -922,4 +923,83 @@
   }
 }
 </style>
+<!--<script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@17.7.0/dist/lazyload.min.js"></script>-->
+<script>
+  window.lazyLoadOptions = {
+    elements_selector: "img[data-lazy-src],.rocket-lazyload,iframe[data-lazy-src]",
+    data_src: "lazy-src",
+    data_srcset: "lazy-srcset",
+    data_sizes: "lazy-sizes",
+    class_loading: "lazyloading",
+    class_loaded: "lazyloaded",
+    threshold: 50,
+    callback_loaded: function(element) {
+        if (element.tagName === "IFRAME" && element.dataset.rocketLazyload == "fitvidscompatible") {
+            if (element.classList.contains("lazyloaded")) {
+                if (typeof window.jQuery != "undefined") {
+                    if (jQuery.fn.fitVids) {
+                        jQuery(element).parent().fitVids()
+                    }
+                }
+            }
+        }
+    }
+};
+window.addEventListener('LazyLoad::Initialized', function(e) {
+    var lazyLoadInstance = e.detail.instance;
+    if (window.MutationObserver) {
+        var observer = new MutationObserver(function(mutations) {
+            var image_count = 0;
+            var iframe_count = 0;
+            var rocketlazy_count = 0;
+            mutations.forEach(function(mutation) {
+                for (var i = 0; i < mutation.addedNodes.length; i++) {
+                    if (typeof mutation.addedNodes[i].getElementsByTagName !== 'function') {
+                        continue
+                    }
+                    if (typeof mutation.addedNodes[i].getElementsByClassName !== 'function') {
+                        continue
+                    }
+                    images = mutation.addedNodes[i].getElementsByTagName('img');
+                    is_image = mutation.addedNodes[i].tagName == "IMG";
+                    iframes = mutation.addedNodes[i].getElementsByTagName('iframe');
+                    is_iframe = mutation.addedNodes[i].tagName == "IFRAME";
+                    rocket_lazy = mutation.addedNodes[i].getElementsByClassName('rocket-lazyload');
+                    image_count += images.length;
+                    iframe_count += iframes.length;
+                    rocketlazy_count += rocket_lazy.length;
+                    if (is_image) {
+                        image_count += 1
+                    }
+                    if (is_iframe) {
+                        iframe_count += 1
+                    }
+                }
+            });
+            if (image_count > 0 || iframe_count > 0 || rocketlazy_count > 0) {
+                lazyLoadInstance.update()
+            }
+        });
+        var b = document.getElementsByTagName("body")[0];
+        var config = {
+            childList: !0,
+            subtree: !0
+        };
+        observer.observe(b, config)
+    }
+}, !1)
+</script>
+<script
+  async
+  src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@17.7.0/dist/lazyload.min.js"
+></script>
+<!--<script>-->
+<!--  lazyLoadInstance.update();-->
+<!--</script>-->
+<!--<script>-->
+<!--  const lazyLoadInstance = new LazyLoad({-->
+<!--  // Your custom settings go here-->
+<!--});-->
+<!--  lazyLoadInstance.update()-->
+<!--</script>-->
 {% endblock %}
