--- a/templates/linkkf-yommi_category.html
+++ b/templates/linkkf-yommi_category.html
@@ -18,13 +18,17 @@
     id="anime_category"
     class="btn-group"
     role="group"
-    aria-label="Basic example"
+    aria-label="linkkf buttons"
   >
     <button id="ing" type="button" class="btn btn-success">방영중</button>
     <button id="movie" type="button" class="btn btn-primary">극장판</button>
     <button id="complete_anilist" type="button" class="btn btn-dark">
       완결
     </button>
+    <button id="top_view" type="button" class="btn btn-yellow">
+      Top
+    </button>
+
   </div>
 
   <form id="airing_list_form">
@@ -33,11 +37,6 @@
   <form id="screen_movie_list_form">
     <div id="screen_movie_list" class="container"></div>
   </form>
-  <!--  <div class="text-center">-->
-  <!--    <div id="spinner" class="spinner-border" role="status">-->
-  <!--      <span class="sr-only">Loading...</span>-->
-  <!--    </div>-->
-  <!--  </div>-->
 
   <form id="program_auto_form">
     <div id="episode_list"></div>
@@ -71,4 +70,5 @@
   async
   src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@17.7.0/dist/lazyload.min.js"
 ></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 {% endblock %}
