--- a/templates/linkkf-yommi_queue.html
+++ b/templates/linkkf-yommi_queue.html
@@ -25,6 +25,8 @@
 const package_name = 'linkkf-yommi';
 let current_data = null;
 
+console.log(io)
+
 $(document).ready(function(){
   const protocol = window.location.protocol;
   const socket = io.connect(protocol + "//" + document.domain + ":" + location.port + "/" + package_name);
@@ -49,7 +51,7 @@ function on_start(data) {
 }
 
 function on_status(data) {
-  // console.log(data)
+  console.log(data)
   let tmp = document.getElementById("progress_"+data.plugin_id)
   if (tmp != null) {
     document.getElementById("progress_"+data.plugin_id).style.width = data.data.percent+ '%';
