--- a/templates/linkkf-yommi_category.html
+++ b/templates/linkkf-yommi_category.html
@@ -10,7 +10,7 @@
       aria-label="Search"
       aria-describedby="search-addon"
     />
-    <button id="btn_search" type="button" class="btn btn-outline-primary">
+    <button id="btn_search" type="button" class="btn btn-primary">
       search
     </button>
   </div>
