자기전 정리 2022.10.17(01.)

--- a/static/css/linkkf-yommi_category.css
+++ b/static/css/linkkf-yommi_category.css
@@ -110,6 +110,13 @@ button.code-button {
   }
 }
 
+@media (min-width: 1280px) {
+  #yommi_wrapper {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+}
+
 #screen_movie_list {
   margin-top: 10px;
 }
