--- a/templates/linkkf-yommi_category.html
+++ b/templates/linkkf-yommi_category.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 
-<div>
+<div id="yommi_wrapper">
   <div class="input-group mb-2">
     <input
       id="input_search"
