자기전 정리 2022.10.17(02.)

--- a/static/css/linkkf-yommi_request.css
+++ b/static/css/linkkf-yommi_request.css
@@ -118,7 +118,12 @@ body {
     background-image: linear-gradient(90deg, #33242c, #263341, #17273a);
 }
 
-
+@media (min-width: 1280px) {
+  #request {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+}
 
 @media (min-width: 992px) {
   .container {
