https://mobikf.ncctvgroup.com
주소변경

--- a/templates/linkkf-yommi_request.html
+++ b/templates/linkkf-yommi_request.html
@@ -5,7 +5,7 @@
     <div class="card p-lg-5 p-md-3 py-2 border-light">
     {{ macros.setting_input_text_and_buttons('code', '작품 Code',
     [['analysis_btn', '분석'], ['go_linkkf_btn', 'Go Linkkf'],
-    ['go_modal_airing', '방영중']], desc='URL: https://linkkf.app/[코드]/
+    ['go_modal_airing', '방영중']], desc='URL: https://mobikf.ncctvgroup.com/[코드]/
     형식에서 코드부분 숫자 (예> 22005 원피스)') }}
     </div>
   </form>
