--- a/templates/linkkf-yommi_list.html
+++ b/templates/linkkf-yommi_list.html
@@ -37,12 +37,15 @@
       </div>
     </div>
   </form>
-  <div id="page1"></div>
-  {{ macros.m_hr_head_top() }} {{ macros.m_row_start('0') }} {{ macros.m_col(2,
-  macros.m_strong('Poster')) }} {{ macros.m_col(10, macros.m_strong('Info')) }}
-  {{ macros.m_row_end() }} {{ macros.m_hr_head_bottom() }}
+  <div id='page1'></div>
+  {{ macros.m_hr_head_top() }}
+  {{ macros.m_row_start('0') }}
+  {{ macros.m_col(2,  macros.m_strong('Poster')) }}
+  {{ macros.m_col(10,  macros.m_strong('Info')) }}
+  {{ macros.m_row_end() }}
+  {{ macros.m_hr_head_bottom() }}
   <div id="list_div"></div>
-  <div id="page2"></div>
+  <div id='page2'></div>
 </div>
 <link
   href="{{ url_for('.static', filename='css/%s.css' % arg['template_name'])
