--- a/templates/linkkf-yommi_category.html
+++ b/templates/linkkf-yommi_category.html
@@ -10,25 +10,13 @@
       aria-label="Search"
       aria-describedby="search-addon"
     />
-    <button id="btn_search" type="button" class="btn btn-primary">
-      search
-    </button>
+    <button id="btn_search" type="button" class="btn btn-primary">search</button>
   </div>
-  <div
-    id="anime_category"
-    class="btn-group"
-    role="group"
-    aria-label="linkkf buttons"
-  >
+  <div id="anime_category" class="btn-group" role="group" aria-label="linkkf buttons">
     <button id="ing" type="button" class="btn btn-success">방영중</button>
     <button id="movie" type="button" class="btn btn-primary">극장판</button>
-    <button id="complete_anilist" type="button" class="btn btn-dark">
-      완결
-    </button>
-    <button id="top_view" type="button" class="btn btn-yellow">
-      Top
-    </button>
-
+    <button id="complete_anilist" type="button" class="btn btn-dark">완결</button>
+    <button id="top_view" type="button" class="btn btn-yellow">Top</button>
   </div>
 
   <form id="airing_list_form">
@@ -53,9 +41,9 @@
   rel="stylesheet"
 />
 <script>
-  "use strict";
-  const package_name = '{{ arg["package_name"] }}';
-  const linkkf_url = "{{arg['linkkf_url']}}";
+  "use strict"
+  const package_name = '{{ arg["package_name"] }}'
+  const linkkf_url = "{{arg['linkkf_url']}}"
 </script>
 
 <script
@@ -70,5 +58,8 @@
   async
   src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@17.7.0/dist/lazyload.min.js"
 ></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css"
+/>
 {% endblock %}
